To do list updates with localStorage

--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
             </div>
         </div>
 
-        <div id="todo-list">
+        <div id="todo-modal" class="hide">
             <h2>Todo list</h2>
-            <input type="text">
+            <input type="text" placeholder="Create a new todo item...">
+            <div id="todo-list">
+                <ul id="todo-ul">
+                    <li class="todo-item done"><a href="#">Coding the momentum app</a></li>
+                    <li class="todo-item"><a href="#">Read design patterns book</a></li>
+                    <li class="todo-item"><a href="#">Pay credit card bills</a></li>
+                </ul>
+            </div>
         </div>
         
         <div class="bg"></div>
