--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <div id="todo-modal" class="hide">
             <h2>Todo list</h2>
             <input type="text" id="todo-input" placeholder="Create a new todo item...">
+            <div class="todo-btns">
+                <button class="mini-btn">Clear tasks</button>
+            </div>
             <div id="todo-list">
                 <ul id="todo-ul">
-                    <li class="todo-item done"><a href="#">Coding the momentum app</a></li>
-                    <li class="todo-item"><a href="#">Read design patterns book</a></li>
-                    <li class="todo-item"><a href="#">Pay credit card bills</a></li>
                 </ul>
             </div>
         </div>
