Clear button for todo list

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2>Todo list</h2>
             <input type="text" id="todo-input" placeholder="Create a new todo item...">
             <div class="todo-btns">
-                <button class="mini-btn">Clear tasks</button>
+                <button class="mini-btn">Clear done</button>
             </div>
             <div id="todo-list">
                 <ul id="todo-ul">
